--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,14 @@ input{
     height: 20px;
     width: 80%;
 }
+img{
+    width: 50px;
+    height: 50px;
+}
+.register-container{
+    background: rgba(94, 23, 235,.3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+}
