--- a/src/style.css
+++ b/src/style.css
@@ -1,25 +1,46 @@
+body{
+    min-height: 100vh;
+}
 *{
     margin:0;
 }
 .register-user{
-    background: rgba(255, 0, 0,0.2);
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 input{
     margin-bottom: 20px;
-    height: 20px;
+    height: 40px;
     width: 80%;
+    font-size: 16px ;
 }
+
 img{
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
+    padding: 20px;
 }
 .register-container{
+    min-height: 85vh;
     background: rgba(94, 23, 235,.3);
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 80%;
+}
+h2{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+button {
+    border-radius: 20px;
+    height: 40px;
+    width: 50%;
+    color: #fff;
+    background: #5E17EB;
+    border: 0px;
+    margin: 30px;
+
 }
