--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,7 @@
-body {
-    min-height: 100vh;
-}
-
-* {
-    margin: 0;
-}
+@media (max-width: 415px){
 
 .register-user {
     min-height: 100vh;
-    display: flex;
     flex-direction: column;
     align-items: center;
 }
@@ -29,7 +22,6 @@ img {
 
 .register-container {
     min-height: 85vh;
-    background: rgba(94, 23, 235, .3);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -45,8 +37,6 @@ button {
     border-radius: 20px;
     height: 40px;
     width: 50%;
-    color: #fff;
-    background: #5E17EB;
     border: 0px;
     margin: 10px;
 
@@ -61,9 +51,93 @@ button {
 
 .login-container {
     min-height: 85vh;
-    background: rgba(94, 23, 235, .3);
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 80%;
+}}
+
+
+
+body {
+    min-height: 100vh;
+   
+}
+
+* {
+    margin: 0;
+    font-family: 'Dosis', sans-serif;
+}
+
+.register-user {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+input {
+    margin-bottom: 20px;
+    height: 40px;
+    width: 80%;
+    font-size: 16px;
+    margin-top: 20px;
+}
+
+img {
+    width: 35%;
+    padding: 20px;
+}
+
+#root {
+    align-items: center;
+}
+.register-container {
+    min-height: 85vh;
+    background: rgba(94, 23, 235, .3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    justify-content: center;
+}
+
+h2 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-family: 'Ysabeau Office', sans-serif;
+    
+}
+
+button {
+    border-radius: 20px;
+    height: 40px;
+    width: 50%;
+    color: #fff;
+    background: #5E17EB;
+    border: 0px;
+    margin: 10px;
+    font-size:large;
+
+}
+
+.login-user {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.login-container {
+    min-height: 85vh;
+    background: rgba(94, 23, 235, .3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    justify-content: center;
+}
+
+@media (max-width: 769px) {
+
 }
