--- a/src/style.css
+++ b/src/style.css
@@ -150,10 +150,20 @@ button img {
     }
     .post-box{
         width: 90%;
-        background-color: #e4e4e4;
+        background-color: rgba(255, 255, 255, 0.4);
         margin: 10px;
+        border-radius: 20px;
     }
-
+    .text-box{
+        background: #FFFFFF;
+    }
+    .post-section{
+        width: 100%;
+        /*background: #39295a;*/
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     #contentHome {
         display: flex;
         align-items: center;
