--- a/src/style.css
+++ b/src/style.css
@@ -91,6 +91,50 @@ button img {
     justify-content: center;
 }
 
+#contentHome {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background:rgba(94, 23, 235, .3);
+    min-height: 100vh;
+}
+
+.post-box{
+    width: 90%;
+    background-color: rgba(255, 255, 255, 0.4);
+    margin: 10px;
+    border-radius: 20px;
+}
+.text-box{
+    background: #FFFFFF;
+   
+}
+.post-section{
+    width: 100%;
+    /*background: #39295a;*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+/* textarea{
+    width: 90%;
+}
+ #textPost{
+    width: 400px;
+    height: 250px;
+    
+} */
+
+.post-section{
+    width: 60%;
+    /*background: #39295a;*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+article {
+    align-items: center;
+}
 @media screen and (max-width: 415px) {
 
     .register-user {
