--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,6 @@
 
 body {
     min-height: 100vh;
-
 }
 
 * {
@@ -92,20 +91,50 @@ button img {
     width: 50%;
     justify-content: center;
 }
+#textPost{
+    width: 50%;
+}
+#btnPublish{
+    width: 30%
+}
+#error-section {
+    width: 100%; 
+    min-height: 100vh;
+    background: rgba(94, 23, 235, .3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
 #contentHome {
+    background:rgba(94, 23, 235, .3);
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 20% 60% 20%;
+}
+#section-all-posts {
+    margin-top: 40px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    background:rgba(94, 23, 235, .3);
-    min-height: 100vh;
 }
-
+#btnSaveChanges{
+    margin: 5px 0 0 25%;
+}
+#contentHome > img {
+    width: 100%;
+    padding: 0%;
+}
 .post-box{
     width: 90%;
     background-color: rgba(255, 255, 255, 0.4);
     margin: 10px;
     border-radius: 20px;
+}
+#btnLogout{
+    margin: 50px 0 0 20px;
+    width: 80%;
 }
 .text-box{
     background: #FFFFFF;
@@ -227,6 +256,13 @@ article {
         flex-direction: column;
         align-items: center;
     }
+    #section-all-posts {
+        width: 80%;
+        margin-top: 40px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
     #contentHome {
         display: flex;
         align-items: center;
@@ -234,7 +270,12 @@ article {
         /* background:rgba(94, 23, 235, .3);*/
         min-height: 100vh;
     }
-
+    #textPost{
+        width: 80%;
+    }
+    #btnPublish{
+        width: 60%
+    }
     #newPost {
         margin-top: 20px;
         width: 80%;
