corrección de modal - confirmación de eliminar publicación

--- a/src/style.css
+++ b/src/style.css
@@ -283,7 +283,7 @@ article {
         align-items: center;
     }    
       .modal {
-      display: none;
+      /* display: none; */
       position: fixed;
       top: 0;
       left: 0;
