--- a/src/style.css
+++ b/src/style.css
@@ -69,6 +69,7 @@ button {
 }
 textarea{
     resize:none;
+    font-size: 1.1rem;
 }
 button img {
     height: 30px;
@@ -133,6 +134,7 @@ button img {
 }
 .like-icon-checkbox{
     grid-area: likeIcon;
+    margin-left: 30%;
 }
 .post-box{
     width: 90%;
@@ -141,9 +143,9 @@ button img {
     border-radius: 20px;
     display: grid;
     grid-template: 
-        'creator creator creator creator' auto
-        'textPost textPost textPost textPost' auto
-        'likeIcon likes ...... dateInformation' auto/ 10% 30% 30% 30%;
+        'creator creator creator creator creator' auto
+        'textPost textPost textPost textPost textPost' auto
+        'likeIcon likes ...... dateInformation dateInformation' auto/ 10% 40% 18% 2% 30%;
 }
 .post-box-owner{
     width: 90%;
@@ -152,10 +154,10 @@ button img {
     border-radius: 20px;
     display: grid;
     grid-template: 
-        'creator creator creator menuPost' auto
-        'textPost textPost textPost textPost' auto
-        'btnSave  btnSave btnSave btnSave' auto
-        'likeIcon likes ...... dateInformation' auto/ 10% 30% 30% 30%;
+        'creator creator creator creator menuPost' auto
+        'textPost textPost textPost textPost textPost' auto
+        'btnSave  btnSave btnSave btnSave btnSave' auto
+        'likeIcon likes ...... dateInformation dateInformation' auto/ 10% 40% 18% 2% 30%;
 }
 #btnLogout{
     margin: 50px 0 0 20px;
@@ -178,7 +180,9 @@ button img {
 
 .text-box > textarea{
     background: #FFFFFF;
-    width: 90%;
+    width: 98%;
+    border: none;
+    font-size: 1em;
 }
 .post-section{
     width: 60%;
@@ -193,7 +197,6 @@ article {
 .like {
   position: absolute;
   left: -100vw;
-  margin-left: 5%;
 }
 
 .like-icon {
@@ -211,6 +214,30 @@ article {
   color: #5E17EB;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+  }
+
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 @media screen and (max-width: 415px) {
 
@@ -327,7 +354,9 @@ article {
       border-radius: 8px;
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     }
-
+    .like-icon-checkbox{
+        margin-left: 15%;
+    }
     .post-box{
         width: 100%;
         grid-template: 
@@ -343,27 +372,4 @@ article {
         'btnSave btnSave btnSave btnSave btnSave' auto
         'likeIcon likes ...... dateInformation dateInformation' auto/ 10% 30% 10% 20% 30%;
     }
-
 }
-.modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: 1;
-  }
-
-  .modal-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-  }
-
