--- a/src/style.css
+++ b/src/style.css
@@ -141,6 +141,7 @@ button img {
     background-color: rgba(255, 255, 255, 0.4);
     margin: 10px;
     border-radius: 20px;
+    border: 1px solid rgb(94, 23, 235);
     display: grid;
     grid-template: 
         'creator creator creator creator creator' auto
@@ -151,13 +152,18 @@ button img {
     width: 90%;
     background-color: rgba(255, 255, 255, 0.4);
     margin: 10px;
-    border-radius: 20px;
+    border-radius: 20px ;
+    border: 1px solid rgb(94, 23, 235);
     display: grid;
     grid-template: 
         'creator creator creator creator menuPost' auto
         'textPost textPost textPost textPost textPost' auto
         'btnSave  btnSave btnSave btnSave btnSave' auto
         'likeIcon likes ...... dateInformation dateInformation' auto/ 10% 40% 18% 2% 30%;
+}
+select{
+    width: 80%;
+    text-align: center;
 }
 #btnLogout{
     margin: 50px 0 0 20px;
